Fixed Scrollbar, Add Scrolltotopbutton, Fixed clientlayout, Add projects Page but need to fix some bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,14 +6,15 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Swal */
-
-.swal2-container * {
-  cursor: auto !important;
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
 }
 
-.swal2-popup {
-  cursor: auto !important;
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* Hide default cursor globally */
